# minimizers

./: .gitignore  Cargo.toml  justfile  plot.ipynb  readme.org
.cargo/: config.toml
benches/: bench.rs  justfile  minimizers.rs
benches/blog/: counting.rs  fxhash.rs  hash.rs  jumping.rs  minimizer.rs  mod.rs  naive.rs  nthash.rs  queue.rs  queue_igor.rs  rescan.rs  rescan2.rs  rescan_daniel.rs  ringbuf.rs  sliding_min.rs  split.rs
benches/randmini/: baseline.rs  daniel.rs  mod.rs  nthash.rs  queue.rs  rescan.rs  sliding_min.rs
benches/random/: baseline.rs  mod.rs
examples/: bruteforce_orders.rs  cycle_partition_lp.rs  defense-visual.rs  greedy.rs  lp.rs  manual.rs  print-random-lex.rs  sus-orders.rs  visual.rs
greedy-mini-data/: README.md
py/: .gitignore  brute-force-analysis.py  defense.py  dsb-slides  dsb-slides.py  fwd.json  greedymini  greedymini.py  header.py  local.json  lower-bound.py  minimizers  playground.py  plot.ipynb  selection.py  sus-anchors-1.py  thesis  thesis-lower-bound.py  thesis.py
src/: bruteforce.rs  cycle_partition_lp.rs  de_bruijn_seq.rs  ilp_scheme.rs  lib.rs  local_scheme.rs  main.rs  monotone_queue.rs  nthash.rs  opt.rs  order.rs  par.rs  py.rs  simd.rs
src/par/: minimizer.rs  nthash.rs  packed.rs
src/par/intrinsics/: deinterleave.rs  gather.rs  lookup.rs
src/schemes/: anchors.rs  bruteforce.rs  decycling.rs  explicit.rs  fracmin.rs  greedy.rs  miniception.rs  minimizer.rs  mod.rs  modmini.rs  open_closed.rs  random.rs  rot_mini.rs  syncmer.rs  threshold.rs
src/simd/: alex.rs  canonical.rs  collect.rs  dedup.rs  linearize.rs  minimizer.rs  nthash.rs  packed.rs  sliding_min.rs
src/simd/intrinsics/: deinterleave.rs  gather.rs  lookup.rs  mod.rs  table_lookup.rs
