[package]
name = "minimizers"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
fxhash = "0.2"
itertools = "0.12"
rand = "0.8"
rayon = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
# good_lp = { version = "1.7.0", features = ["scip"], default-features = false}
# good_lp = { version = "1.7.0", features = ["highs"], default-features = false}
good_lp = { version = "1.7", features = ["lp-solvers"], default-features = false}
num = "0.4"
wyhash = "0.5"
color-backtrace = "0.6"
ctor = "0.2"
nthash = { git = "https://github.com/luizirber/nthash" }

[[example]]
name = "lp"

[dev-dependencies]
criterion = "*"
minimizer-iter = "1.2.1"

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
